Fixed project to compile